--- a/PSS/PSS/Pages/Test.razor
+++ b/PSS/PSS/Pages/Test.razor
@@ -11,6 +11,6 @@
 
     private static void Yes()
     {
-        C.AddToAlbum(new Guid("56ff78b0-ef4d-11ec-8ea0-0242ac120002"), 4);
+        C.AddToCollection(new Guid("56ff78b0-ef4d-11ec-8ea0-0242ac120002"), 4);
     }
 }
