--- a/PSS/PSS/Pages/Starred.razor
+++ b/PSS/PSS/Pages/Starred.razor
@@ -21,7 +21,7 @@
     <LibraryContentViewer @ref="@libContentViewer" @bind-HeaderVis="@headerVis" @bind-SelectedItemsCount="@selectedItemsCount" NotNullDTQueryTop="@topQuery" NotNullDTQueryBottom="@bottomQuery" NoItemsText="Items Marked As Starred and with a Date Taken Appear Here"
                           FirstQuery="SELECT path, date_taken, date_added, starred, uuid, thumbnail FROM media WHERE starred = true AND date_deleted IS NULL AND date_taken IS NOT NULL ORDER BY date_taken DESC LIMIT 50"/>
     
-    <AlbumSelector SelectedItems="@libContentViewer.SelectedItems" @bind-HeaderVis="@headerVis" @bind-AlbumsVis="@albumsVis"/>
+    <CollectionSelector SelectedItems="@libContentViewer.SelectedItems" @bind-HeaderVis="@headerVis" @bind-CollectionsVis="@albumsVis"/>
 
     <KeyboardShortcuts AltA="@(() => { F.VisToggle(ref albumsVis); StateHasChanged(); })" />
 }
