--- a/PSS/PSS/Shared/CollectionSelector.razor
+++ b/PSS/PSS/Shared/CollectionSelector.razor
@@ -138,7 +138,7 @@
     }
 
     //Add item(s) to album(s) or folder selected.
-    private async void ConfirmBtnClick()
+    public async void ConfirmBtnClick()
     {
         if (checkedFolderIndex != -1) //If a folder is selected this won't be -1
         {
