Update NavMenu, Index, Starred, and No DT

--- a/PSS/PSS/Pages/No Date Taken.razor
+++ b/PSS/PSS/Pages/No Date Taken.razor
@@ -7,7 +7,7 @@
     <header style="visibility: @headerVis">
         <div id="buttons">
             <button class="iconBtn"><a style="text-decoration: none" class="material-icons-outlined" @onclick="@libContentViewer.DownloadSelected" href="@S.TMP_REQUEST_PATH/@libContentViewer.ZipFilename" download="@libContentViewer.ZipFilename">file_download</a></button>
-            <button class="iconBtn" @onclick="@(() => F.VisToggle(ref albumsVis))"><span class="material-icons-outlined">collections</span></button>
+            <button class="iconBtn" @onclick="@(() => F.VisToggle(ref collectionsVis))"><span class="material-icons-outlined">collections</span></button>
             <button class="iconBtn" title="Add or Remove Stars From Selected" @onclick="@(() => F.VisToggle(ref libContentViewer.starPromptVis))"><span class="material-icons-outlined">star_outline</span></button>
             <button class="iconBtn" @onclick="@libContentViewer.DeleteBtnClick"><svg width="24px" height="24px" class="material-icons" viewBox="0 0 24 24"><path d="M15 4V3H9v1H4v2h1v13c0 1.1.9 2 2 2h10c1.1 0 2-.9 2-2V6h1V4h-5zm2 15H7V6h10v13zM9 8h2v9H9zm4 0h2v9h-2z"></path></svg></button>
         </div>
@@ -20,20 +20,20 @@
     <LibraryContentViewer @ref="@libContentViewer" UseDateAdded="true" @bind-HeaderVis="@headerVis" @bind-SelectedItemsCount="@selectedItemsCount" NoItemsText="Upload some items to get started" NotNullDTQueryTop="@topQuery" NotNullDTQueryBottom="@bottomQuery"
         FirstQuery="SELECT path, date_taken, date_added, starred, uuid, thumbnail FROM media WHERE separate = false AND date_taken IS NULL AND date_deleted IS NULL ORDER BY date_added DESC LIMIT 50"/>
     
-    <CollectionSelector SelectedItems="@libContentViewer.SelectedItems" @bind-HeaderVis="@headerVis" @bind-CollectionsVis="@albumsVis"/>
+    <CollectionSelector SelectedItems="@libContentViewer.SelectedItems" @bind-HeaderVis="@headerVis" @bind-CollectionsVis="@collectionsVis"/>
 
-    <KeyboardShortcuts AltA="@(() => { F.VisToggle(ref albumsVis); StateHasChanged(); })" />
+    <KeyboardShortcuts AltA="@(() => { F.VisToggle(ref collectionsVis); StateHasChanged(); })" />
 }
 
 @code {
     private static LibraryContentViewer libContentViewer = new();
     private static int selectedItemsCount;
     
-    private static string headerVis, albumsVis;
+    private static string headerVis, collectionsVis;
 
     protected override void OnInitialized()
     {
         selectedItemsCount = 0;
-        headerVis = albumsVis = "hidden";
+        headerVis = collectionsVis = "hidden";
     }
 }
