--- a/PSS/PSS/Shared/NavMenu.razor
+++ b/PSS/PSS/Shared/NavMenu.razor
@@ -30,7 +30,7 @@
 
 <nav style="position: fixed; margin-right: 10px; margin-left: -10px; margin-top: 0;">
     <a href="/"><span class="material-icons-outlined">&#xe3f4;</span><span>Photos</span></a>
-    <a href="albums"><span class="material-icons-outlined">&#xe411;</span><span>Albums</span></a>
+    <a href="collections"><span class="material-icons-outlined">&#xe411;</span><span>Collections</span></a>
     <a href="upload"><span class="material-icons-outlined">&#xe2c3;</span><span>Upload</span></a>
     <a href="starred"><span class="material-icons-outlined">&#xf06f;</span><span>Starred</span></a>
     <a href="no-dt"><span class="material-icons-outlined">help_outline</span><span>No DT</span></a>
