Start work on Ctrl G. Div can be shown and has styling

--- a/PSS/PSS/Shared/KeyboardShortcuts.razor
+++ b/PSS/PSS/Shared/KeyboardShortcuts.razor
@@ -27,6 +27,9 @@
 
 	[Parameter]
 	public Action CtrlE { get; set; }
+	
+	[Parameter]
+	public Action CtrlG { get; set; }
 
 	[Parameter]
 	public Action AltF { get; set; }
@@ -53,6 +56,7 @@
 		if (Right != null) HotKeysContext.Add(ModKeys.None, Keys.Right, Right);
 		if (CtrlD != null) HotKeysContext.Add(ModKeys.Ctrl, Keys.D, CtrlD);
 		if (CtrlE != null) HotKeysContext.Add(ModKeys.Ctrl, Keys.E, CtrlE);
+		if (CtrlG != null) HotKeysContext.Add(ModKeys.Ctrl, Keys.G, CtrlG);
 		if (AltF != null) HotKeysContext.Add(ModKeys.Alt, Keys.F, AltF);
 		if (AltA != null) HotKeysContext.Add(ModKeys.Alt, Keys.A, AltA);
 		if (AltS != null) HotKeysContext.Add(ModKeys.Alt, Keys.S, AltS);
