--- a/PSS/PSS/Shared/LibraryContentViewer.razor
+++ b/PSS/PSS/Shared/LibraryContentViewer.razor
@@ -318,7 +318,8 @@ If it can't find any content, it shows an h1 saying no content.
 				C.MediaRow newRow = new(r.GetString(0), r.IsDBNull(1) ? null : r.GetDateTime(1), r.GetDateTime(2), r.GetBoolean(3), r.GetGuid(4), r.IsDBNull(5) ? null : r.GetString(5));
 				if (!MediaList.Contains(newRow))
 				{
-					MediaList.Add(newRow);
+					if (bottom) MediaList.Add(newRow);
+					else MediaList.Insert(0, newRow);
 					amountAdded++;
 				}
 			}
